# DSA-MiniProject-Email-Spam-Analyzer

./: DSA-Project-Final PPT.pptx  README.md  a.out
analysis/: bloomfilterspamdetectionanalysis.csv  email_model_scores_analysis.csv  keywords.c  word_to_freq.csv
analysis/performance_metrics_for_bloom_filter/: spamemailIDs.txt
configuration/: TrieMap.c  preprocessed_emails.txt
matrixbfupdate/emailclassifiermodel-atharva/: a.out  bloomfilter.h  main.c
matrixbfupdate/emailclassifiermodel-atharva/archive/: answers.csv  datacleanup.py  testemailIDs.csv
matrixbfupdate/emailclassifiermodel-atharva/archive/Preprocessed/: AdvanceProcessing.c  freq.csv  keywords.c  keywords.txt  output.csv  output1.txt  preprocessing.py  test.csv
model/: AdvanceProcessing.c  CMakeLists.txt  Makefile  a.out  bloomfilter.h  bloomfiltermodel.c  commands.txt  finalmodel.c  main  main.c
model/GUI/: main
model/include/: bloomfilter.h  model_to_score_an_email_file.h
model/src/: finalmodel.c  model_to_score_an_email_file.c
model/testcases/: testcase1.txt  testcase10.txt  testcase13.txt  testcase2.txt  testcase3.txt  testcase4.txt  testcase6.txt  testcase7.txt  testcase8.txt  testemail.txt
simplebloom/: bloomfilter.h  main.c  shabitwiseoperations.txt
simplebloom/archive/: answers.csv  spamemails.csv  testemailIDs.csv
